--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "nanotimer": "^0.3.15",
+    "present": "^1.0.0",
     "rpi-ws281x-native": "^0.10.0",
     "socket.io": "^2.3.0"
   }
