--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "homepage": "https://github.com/hobberwickey/pi-pixels#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "johnny-five": "^2.0.0",
     "nanotimer": "^0.3.15",
     "present": "^1.0.0",
+    "raspi-io": "^11.0.0",
     "rpi-ws281x-native": "^0.10.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "usb": "^1.6.3"
   }
 }
